[tool.poetry]
name = "claude-changeset-backend"
version = "0.1.0"
description = ""
authors = ["Martijn van Exel <m@rtijn.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
gunicorn = "^23.0.0"
python-dotenv = "^1.0.1"
anthropic = "^0.39.0"
flask-caching = "^2.3.0"
flask-cors = "^5.0.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
